# mini_bot.rs

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY_TODO.md  config.example.toml  mini_bot-mvp-guide.md
src/agent/: mod.rs
src/config/: crypto.rs  mod.rs
src/gateway/: handlers.rs  mod.rs
src/memory/: sqlite.rs
src/tools/: file.rs  shell.rs
